2006-05-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-server.c: suppress progress popups
	by installing progress handlers that do nothing (bug #317498).

	* plug-ins/script-fu/script-fu-interface.c: formatting.

2006-05-29  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/channel.pdb (channel_combine_masks): push a
	channel undo. Fixes bug #343026.

	* app/pdb/channel_cmds.c: regenerated.

2006-05-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/gimpressionist/presets.c: check for NULL before using a
	string pointer. Fixes bug #343121.

2006-05-28  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/pnm.c: applied patch from Martin Collins which
	adds PBM (bitmap) support. Fixes bug #167578. Did some additional
	cleanups and sprinkled some gimp_progress_update(1.0).

2006-05-28  Michael Natterer  <mitch@gimp.org>

	Applied patch from David Gowers which adds actions to select
	palette and colormap colors with actions. Modified the patch quite
	a bit. Fixes bug #130123.

	* app/widgets/gimpcolormapeditor.[ch]
	* app/widgets/gimppaletteeditor.[ch]: add functions get_index()
	which gets the currently selected color's index (optionally the
	index of a passed color), set_index() which sets the selected
	color by index, and max_index() which returns the maximum possible
	color index.

	* app/dialogs/dialogs-constructors.c: changed accordingly.

	* app/actions/context-actions.c
	* app/actions/context-commands.[ch]: actions and callbacks which
	use the new functions.

2006-05-28  Akkana Peck  <akkana@cvs.gnome.org>

	* plug-ins/script-fu/scripts/reverse-layers.scm: revert
	previous change: allow layers without alpha to be moved up.

2006-05-28  Michael Natterer  <mitch@gimp.org>

	* app/core/gimppalette-import.[ch]: added support for extracting
	colors from the selected pixels only.

	* app/dialogs/palette-import-dialog.c: added "Sample merged" and
	"Selected Pixels only" toggles. Fixes bug #316212. Cleaned up the
	code quite a bit.
