@@ -318,12 +318,17 @@ gimp_dock_key_press_event (GtkWidget   *widget,
                            GdkEventKey *event)
 {
   GtkWindow *window  = GTK_WINDOW (widget);
+  GtkWidget *focus   = gtk_window_get_focus (window);
   gboolean   handled = FALSE;
 
   /* we're overriding the GtkWindow implementation here to give
    * the focus widget precedence over unmodified accelerators
    * before the accelerator activation scheme.
    */
+
+  /* text widgets get all key events first */
+  if (G_UNLIKELY (GTK_IS_EDITABLE (focus) || GTK_IS_TEXT_VIEW (focus)))
+    handled = gtk_window_propagate_key_event (window, event);
 
   /* invoke control/alt accelerators */
   if (! handled && event->state & (GDK_CONTROL_MASK | GDK_MOD1_MASK))
