@@ -1,3 +1,8 @@
+2006-05-29  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpdock.c (gimp_dock_key_press_event): make sure
+	text widgets get all key events first. Fixes bug #301006.
+
 2006-05-29  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/script-fu/script-fu-server.c: suppress progress popups
@@ -26,8 +31,8 @@
 2006-05-28  Michael Natterer  <mitch@gimp.org>
 
 	Applied patch from David Gowers which adds actions to select
-	palette and colormap colors with actions. Modified the patch quite
-	a bit. Fixes bug #130123.
+	palette and colormap colors. Modified the patch quite a bit.
+	Fixes bug #130123.
 
 	* app/widgets/gimpcolormapeditor.[ch]
 	* app/widgets/gimppaletteeditor.[ch]: add functions get_index()
